--- a/sites/all/themes/gxnulib/sass/components/views/_view-block.scss
+++ b/sites/all/themes/gxnulib/sass/components/views/_view-block.scss
@@ -15,4 +15,31 @@ and open the template in the editor.
             color: $link-color;
         }
     }
+    .view-header {
+    	background: #f9f9f9;
+	    border-left: 10px solid #ccc;
+	    margin: 1.5em 10px;
+	    padding: 0.5em 10px;
+	    quotes: "\201C""\201D""\2018""\2019";
+    }
+    div.view-header:before {
+	    color: #ccc;
+	    content: open-quote;
+	    font-size: 4em;
+	    line-height: 0.1em;
+	    margin-right: 0.25em;
+	    vertical-align: -0.4em;
+	}
+    div.view-header:after {
+	    color: #ccc;
+	    content: close-quote;
+	    font-size: 4em;
+	    line-height: 0.1em;
+	    margin-right: 0.25em;
+	    vertical-align: -0.4em;
+	}
+    .view-header p {
+    	display: inline;
+    	margin-bottom: 0;
+    }
 }
