Update website styles

--- a/sites/all/themes/gxnulib/sass/components/views/_view-block.scss
+++ b/sites/all/themes/gxnulib/sass/components/views/_view-block.scss
@@ -16,14 +16,14 @@ and open the template in the editor.
         }
     }
     .view-header {
-    	background: #f9f9f9;
-	    border-left: 10px solid #ccc;
+    	background: $blockquote-bgcolor;
+	    border: 1px dashed $blockquote-border-color;
 	    margin: 1.5em 10px;
-	    padding: 0.5em 10px;
+	    padding: 1em 10px;
 	    quotes: "\201C""\201D""\2018""\2019";
     }
     div.view-header:before {
-	    color: #ccc;
+	    color: $blockquote-quote-color;
 	    content: open-quote;
 	    font-size: 4em;
 	    line-height: 0.1em;
@@ -31,7 +31,7 @@ and open the template in the editor.
 	    vertical-align: -0.4em;
 	}
     div.view-header:after {
-	    color: #ccc;
+	    color: $blockquote-quote-color;
 	    content: close-quote;
 	    font-size: 4em;
 	    line-height: 0.1em;
@@ -41,5 +41,8 @@ and open the template in the editor.
     .view-header p {
     	display: inline;
     	margin-bottom: 0;
+    	color: $blockquote-color;
+    	font-size: 1.1em;
+    	line-height: 1.8em;
     }
 }
