--- a/sites/all/themes/gxnulib/css/gxnulib.styles.css
+++ b/sites/all/themes/gxnulib/css/gxnulib.styles.css
@@ -1516,14 +1516,14 @@ and open the template in the editor.
     color: #922525; }
 /* line 18, ../sass/components/views/_view-block.scss */
 .view .view-header {
-  background: #f9f9f9;
-  border-left: 10px solid #ccc;
+  background: #fcfcfc;
+  border: 1px dashed #922525;
   margin: 1.5em 10px;
-  padding: 0.5em 10px;
+  padding: 1em 10px;
   quotes: "“" "”" "‘" "’"; }
 /* line 25, ../sass/components/views/_view-block.scss */
 .view div.view-header:before {
-  color: #ccc;
+  color: #922525;
   content: open-quote;
   font-size: 4em;
   line-height: 0.1em;
@@ -1531,7 +1531,7 @@ and open the template in the editor.
   vertical-align: -0.4em; }
 /* line 33, ../sass/components/views/_view-block.scss */
 .view div.view-header:after {
-  color: #ccc;
+  color: #922525;
   content: close-quote;
   font-size: 4em;
   line-height: 0.1em;
@@ -1540,6 +1540,9 @@ and open the template in the editor.
 /* line 41, ../sass/components/views/_view-block.scss */
 .view .view-header p {
   display: inline;
-  margin-bottom: 0; }
+  margin-bottom: 0;
+  color: gray;
+  font-size: 1.1em;
+  line-height: 1.8em; }
 
 /*# sourceMappingURL=gxnulib.styles.css.map */
