--- a/sites/all/themes/gxnulib/css/gxnulib.styles.css
+++ b/sites/all/themes/gxnulib/css/gxnulib.styles.css
@@ -1051,7 +1051,10 @@ and open the template in the editor.
   padding: 1.5em 0.5em; }
   /* line 28, ../sass/components/nodes/_node.scss */
   .node__content p {
-    /* text-indent: 2em; */ }
+    text-indent: 2em; }
+  /* line 32, ../sass/components/nodes/_node.scss */
+  .node__content table td p {
+    text-indent: 0; }
 
 /*
 To change this license header, choose License Headers in Project Properties.
