--- a/sites/all/themes/gxnulib/sass/components/nodes/_node.scss
+++ b/sites/all/themes/gxnulib/sass/components/nodes/_node.scss
@@ -26,6 +26,10 @@ and open the template in the editor.
     padding: $vert-spacing-unit $spacing;
     
     p {
-        /* text-indent: 2em; */
+        text-indent: 2em;
+    }
+
+    table td p {
+        text-indent: 0;
     }
 }
